[tool.poetry]
name = "test_api"
version = "0.1.0"
description = "Mock the Github Api for testing"
authors = ["Stig Ofstad <stigofstad@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.109.1"
uvicorn = "^0.13.4"
aiofiles = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
